2020-02-21  Chris Dumez  <cdumez@apple.com>

        Remove WebPasteBoardProxy::PasteboardCopy as it is dead code
        https://bugs.webkit.org/show_bug.cgi?id=208058
        <rdar://problem/59658727>

        Reviewed by Geoffrey Garen.

        * UIProcess/Cocoa/WebPasteboardProxyCocoa.mm:
        * UIProcess/WebPasteboardProxy.h:
        * UIProcess/WebPasteboardProxy.messages.in:

2020-02-21  Per Arne Vollan  <pvollan@apple.com>

        [iOS] Fix media related sandbox issues in the GPU process
        https://bugs.webkit.org/show_bug.cgi?id=208033

        Reviewed by Eric Carlson.

        The mach lookup sandbox extension to 'com.apple.tccd' needs to be created with the method SandboxExtension::createHandleForMachLookup.
        The file read-write sandbox extension to the media cache directory needs to be created with the parent folder of the actual cache folder,
        since the media frameworks also seem to access files there.

        No new tests, covered by existing tests.

        * UIProcess/GPU/GPUProcessProxy.cpp:
        (WebKit::GPUProcessProxy::singleton):
        (WebKit::gpuProcessSessionParameters):

2020-02-20  Peng Liu  <peng.liu6@apple.com>

        [Media in GPU process] Synchronize the properties of video layers in the GPU process with the hosting layer in the web process
        https://bugs.webkit.org/show_bug.cgi?id=206132

        Reviewed by Jer Noble.

        MediaPlayerPrivateRemote creates WKVideoLayerRemote whose sublayer is created by LayerHostingContext::createPlatformLayerForHostingContext().
        The WKVideoLayerRemote will be used by the renderer to manage the video element in the Web process. When its size is changed by the renderer,
        it applies a transform without changing its actual size, and sends a message to MediaPlayerPrivateProxy in the GPU process
        to change the size of the container layer. After that, WKVideoLayerRemote will set its size to the correct one in the Web process side.