@@ -204,7 +204,6 @@ messages -> WebPageProxy {
 #endif
 #if PLATFORM(COCOA)
     DrawToPDFCallback(IPC::DataReference pdfData, WebKit::CallbackID callbackID)
-    MachSendRightCallback(MachSendRight sendRight, WebKit::CallbackID callbackID)
     NowPlayingInfoCallback(bool active, bool registeredAsNowPlayingApplication, String title, double duration, double elapsedTime, uint64_t uniqueIdentifier, WebKit::CallbackID callbackID)
 #endif
     FindStringCallback(bool found, WebKit::CallbackID callbackID)
