@@ -1,5 +1,17 @@
 2020-02-21  Chris Dumez  <cdumez@apple.com>
 
+        Remove WebPageProxy::machSendRightCallback as it is dead code
+        https://bugs.webkit.org/show_bug.cgi?id=208057
+        <rdar://problem/59658805>
+
+        Reviewed by Geoffrey Garen.
+
+        * UIProcess/WebPageProxy.cpp:
+        * UIProcess/WebPageProxy.h:
+        * UIProcess/WebPageProxy.messages.in:
+
+2020-02-21  Chris Dumez  <cdumez@apple.com>
+
         Remove WebPasteBoardProxy::PasteboardCopy as it is dead code
         https://bugs.webkit.org/show_bug.cgi?id=208058
         <rdar://problem/59658727>
